# django-tiles-gl

./: .gitignore  DEVELOPMENT.md  LICENSE.md  README.md  manage.py  package.json  pyproject.toml
.github/workflows/: publish-pypi-test.yml
demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/templates/: index.html
django_tiles_gl/: apps.py  asgi.py  mbtiles.py  settings.py  urls.py  utils.py  views.py  wsgi.py
django_tiles_gl/static/django-tiles-gl/maplibre/: maplibre-gl.js
django_tiles_gl/static/django-tiles-gl/sprites/: sprite.json  sprite@2x.json
django_tiles_gl/templates/django_tiles_gl/: maplibre_head.html  style.json
django_tiles_gl/templatetags/: tiles_gl_tags.py
scripts/: generate-sprites.js  install-maplibre.sh  install-style.sh  make-fonts.sh  make-style.sh
