[tool.poetry]
name = "django-tiles-gl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
landez = "^2.5.0"
Django = "^4.0.2"
pytest = "^5.2"
ipython = "^8.0.1"
Pillow = "^9.0.1"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
