[tool.poetry]
name = "django-tiles-gl"
version = "0.3.6"
description = "Integrated Django Vector Tile Server based on mbtiles"
readme = "README.md"
authors = ["Johannes Dillmann <dev@ae35.de>"]
license = "BSD-3-Clause"
homepage = "https://github.com/kleingeist/django-tiles-gl"
repository = "https://github.com/kleingeist/django-tiles-gl"
keywords = ["django", "map", "mbtiles",]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.1,<4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    # Required dependencies to build with pip from git
    "setuptools",
    "wheel",
]
build-backend = "poetry.core.masonry.api"
